--- a/Login.fxml
+++ b/Login.fxml
@@ -9,30 +9,44 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="410.0" prefWidth="627.0" style="-fx-background-color: #566573;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="foody.LoginController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="514.0" prefWidth="651.0" style="-fx-background-color: #ff2b5c;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="foodyorder.LoginController">
    <children>
-      <AnchorPane layoutX="27.0" layoutY="26.0" prefHeight="358.0" prefWidth="293.0" style="-fx-background-color: white;">
+      <AnchorPane layoutX="24.0" layoutY="138.0" prefHeight="337.0" prefWidth="314.0" style="-fx-background-color: white;">
          <children>
-            <JFXTextField fx:id="textemail" focusColor="#f24541" labelFloat="true" layoutX="30.0" layoutY="133.0" prefHeight="25.0" prefWidth="232.0" promptText="Enter Email" unFocusColor="#f0ab41" />
-            <JFXPasswordField fx:id="textpass" focusColor="#f24541" labelFloat="true" layoutX="30.0" layoutY="212.0" prefHeight="25.0" prefWidth="232.0" promptText="Enter Password" unFocusColor="#f4aa41" />
-            <JFXButton buttonType="RAISED" layoutX="81.0" layoutY="286.0" onAction="#Login" prefHeight="25.0" prefWidth="130.0" style="-fx-background-color: #f4aa41;" text="Login" textFill="WHITE" />
-            <Label layoutX="65.0" layoutY="41.0" prefHeight="33.0" prefWidth="164.0" text="Login to Foody" textFill="#ffb108">
+            <Label layoutX="108.0" layoutY="49.0" prefHeight="33.0" prefWidth="73.0" text="Login " textFill="#ff0d9b">
                <font>
-                  <Font name="SansSerif Bold" size="20.0" />
+                  <Font name="Comic Sans MS Bold" size="23.0" />
                </font>
             </Label>
-            <Label fx:id="alertLabel" layoutX="118.0" layoutY="91.0" prefHeight="17.0" prefWidth="102.0" textFill="RED" wrapText="true">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-            </Label>
+            <JFXTextField fx:id="emptxt" focusColor="#ff3377" labelFloat="true" layoutX="43.0" layoutY="114.0" prefHeight="25.0" prefWidth="202.0" promptText="User Id" unFocusColor="#d01336" />
+            <JFXPasswordField fx:id="passtxt" focusColor="#ff3377" labelFloat="true" layoutX="43.0" layoutY="195.0" prefHeight="25.0" prefWidth="202.0" promptText="Password" unFocusColor="#d01336" />
+            <JFXButton buttonType="RAISED" layoutX="83.0" layoutY="263.0" onAction="#Login" prefHeight="25.0" prefWidth="117.0" style="-fx-background-color: #5cd096;" text="Login" textFill="WHITE" />
          </children>
       </AnchorPane>
-      <JFXButton buttonType="RAISED" layoutX="566.0" layoutY="14.0" onAction="#exitScreen" style="-fx-background-color: #CCD1D1;" text="CLOSE" textFill="#ff0f0f" />
-      <ImageView fitHeight="185.0" fitWidth="239.0" layoutX="358.0" layoutY="138.0" pickOnBounds="true" preserveRatio="true">
+      <Label layoutX="377.0" layoutY="177.0" prefHeight="38.0" prefWidth="250.0" text="Restaurant Login" textFill="WHITE">
+         <font>
+            <Font name="Comic Sans MS Bold Italic" size="26.0" />
+         </font>
+      </Label>
+      <Label layoutX="280.0" layoutY="26.0" prefHeight="38.0" prefWidth="150.0" text="Foody" textFill="#ffeea3">
+         <font>
+            <Font name="Comic Sans MS Bold Italic" size="44.0" />
+         </font>
+      </Label>
+      <ImageView fitHeight="179.0" fitWidth="177.0" layoutX="24.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../images/clipart46971465.png" />
+            <Image url="@../images/tacos.png" />
          </image>
       </ImageView>
+      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="418.0" layoutY="243.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/utensils-clipart-head-chef-9.png" />
+         </image>
+      </ImageView>
+      <JFXButton buttonType="RAISED" cancelButton="true" layoutX="577.0" layoutY="26.0" onAction="#exitScreen" prefHeight="38.0" prefWidth="42.0" style="-fx-background-color: #5cd096; -fx-background-radius: 150;" text="X" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="16.0" />
+         </font>
+      </JFXButton>
    </children>
 </AnchorPane>
